--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
     <!-- Main template Css file -->
     <link rel="stylesheet" href="css/kasper.css" />
     <link rel="stylesheet" href="css/glabal_rulse.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/landing.css" />
+    <link rel="stylesheet" href="css/components/header.css" />
+    <link rel="stylesheet" href="css/components/landing.css" />
+    <link rel="stylesheet" href="css/components/main_heading.css" />
+    <link rel="stylesheet" href="css/components/services.css" />
+    <link rel="stylesheet" href="css/components/design.css" />
+    <link rel="stylesheet" href="css/components/portfolio.css" />
+    <link rel="stylesheet" href="css/components/video.css" />
+    <link rel="stylesheet" href="css/components/about.css" />
+    <link rel="stylesheet" href="css/components/pricing.css" />
+    <link rel="stylesheet" href="css/components/contact_us.css" />
+    <link rel="stylesheet" href="css/components/footer.css" />
 
     <!-- Font Family ==> (Open Sans) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +37,7 @@
   </head>
 
   <body>
-    <!-- Header -->
+    <!-- Start Header -->
     <header class="header">
       <div class="container">
         <!-- logo -->
@@ -69,6 +78,7 @@
         </nav>
       </div>
     </header>
+    <!-- End Header -->
 
     <!-- Start Landing -->
     <section class="landing">
@@ -97,7 +107,517 @@
         <li></li>
       </ul>
     </section>
-
     <!-- End Landing -->
+
+    <!-- Start Services -->
+    <section class="services">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <div class="content">
+            <h2>Services</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+
+        <!-- Body Services -->
+        <div class="services-container">
+          <!-- item => 1 -->
+          <div class="service-box-item">
+            <i class="fas fa-desktop fa-3x"></i>
+
+            <div class="content-box">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Curabitur aliquet quam.
+              </p>
+            </div>
+          </div>
+
+          <!-- item => 2 -->
+          <div class="service-box-item">
+            <i class="fas fa-cog fa-3x"></i>
+
+            <div class="content-box">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Curabitur aliquet quam.
+              </p>
+            </div>
+          </div>
+
+          <!-- item => 3 -->
+          <div class="service-box-item">
+            <i class="fas fa-pencil-ruler fa-3x"></i>
+
+            <div class="content-box">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Curabitur aliquet quam.
+              </p>
+            </div>
+          </div>
+
+          <!-- item => 4 -->
+          <div class="service-box-item">
+            <i class="fas fa-camera fa-3x"></i>
+
+            <div class="content-box">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Curabitur aliquet quam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Services -->
+
+    <!-- Start Design -->
+    <section class="design">
+      <div class="image">
+        <img src="assets/images/mobile.png" alt="mobile" />
+      </div>
+      <div class="content">
+        <h2>OUR DESIGN COMES WITH...</h2>
+        <ul>
+          <li>Responsive Design</li>
+          <li>Modern And Clean Design</li>
+          <li>Clean Code</li>
+          <li>Browser Friendly</li>
+        </ul>
+      </div>
+    </section>
+    <!-- End Design -->
+
+    <!-- Start Portfolio -->
+    <section class="portfolio">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <div class="content">
+            <h2>Portfolio</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+        <div class="menu-button">
+          <ul>
+            <li class="active">All</li>
+            <li>App</li>
+            <li>Photo</li>
+            <li>Web</li>
+            <li>Print</li>
+          </ul>
+        </div>
+      </div>
+      <!-- Body Portfolio -->
+      <div class="portfolio-container">
+        <div class="image-container">
+          <!-- item 1 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-01.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 2 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-02.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 3 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-03.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 4 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-04.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 5 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-05.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 6 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-06.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 7-->
+          <div class="box-item">
+            <img src="assets/images/shuffle-07.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <!-- item 8 -->
+          <div class="box-item">
+            <img src="assets/images/shuffle-08.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesome Image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="more-button">More</div>
+      </div>
+    </section>
+    <!-- End Portfolio -->
+
+    <!-- Start Video -->
+    <section class="video">
+      <video autoplay muted loop>
+        <source src="assets/images/awesome-video.mp4" type="video/mp4" />
+      </video>
+      <div class="content-video">
+        <h2>Super Awesome Video Here</h2>
+        <p>Its All You Need</p>
+        <button>See More</button>
+      </div>
+    </section>
+    <!-- End Video -->
+
+    <!-- Start About Us -->
+    <section class="about">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <div class="content">
+            <h2>About Us</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+
+        <!-- Body About Us -->
+        <div class="about-container">
+          <img src="assets/images/about.png" alt="about" />
+        </div>
+      </div>
+      <!-- Stert Stats-->
+      <div class="stats">
+        <div class="container">
+          <div class="box">
+            <i class="fas fa-mug-hot"></i>
+            <div class="number">1.236</div>
+            <p>Coffee Drinks</p>
+          </div>
+          <div class="box">
+            <i class="far fa-folder"></i>
+            <div class="number">256</div>
+            <p>Completed Projects</p>
+          </div>
+          <div class="box">
+            <i class="far fa-envelope"></i>
+            <div class="number">1,743</div>
+            <p>Mail Sent</p>
+          </div>
+          <div class="box">
+            <i class="fas fa-trophy"></i>
+            <div class="number">17</div>
+            <p>Awards Received</p>
+          </div>
+        </div>
+      </div>
+      <!-- End Stats -->
+
+      <!-- Start Skills -->
+      <div class="our-skills">
+        <div class="container">
+          <div class="testimonials">
+            <div class="head">
+              <h3>Testimonials</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt.
+              </p>
+            </div>
+            <div class="content">
+              <div class="box-item">
+                <img src="assets/images/skills-01.jpg" alt="skills" />
+                <div class="text">
+                  Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                  sem. Mauris blandit aliquet elit, eget tincidunt.
+                  <p>John Doe, CEO</p>
+                </div>
+              </div>
+              <div class="box-item">
+                <img src="assets/images/skills-02.jpg" alt="skills" />
+                <div class="text">
+                  Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                  sem. Mauris blandit aliquet elit, eget tincidunt.
+                  <p>John Doe, CEO</p>
+                </div>
+              </div>
+            </div>
+            <ul class="bullets">
+              <li></li>
+              <li class="active"></li>
+              <li></li>
+            </ul>
+          </div>
+
+          <div class="skills">
+            <div class="head">
+              <h3>Skills</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt.
+              </p>
+            </div>
+
+            <div class="content">
+              <div class="progress-holder">
+                <h4>Adobe</h4>
+                <div class="prog">
+                  <span style="width: 90%" data-progress="90%"></span>
+                </div>
+              </div>
+              <div class="progress-holder">
+                <h4>Html &amp; Css</h4>
+                <div class="prog">
+                  <span style="width: 85%" data-progress="85%"></span>
+                </div>
+              </div>
+              <div class="progress-holder">
+                <h4>JavaScript</h4>
+                <div class="prog">
+                  <span style="width: 80%" data-progress="80%"></span>
+                </div>
+              </div>
+              <div class="progress-holder">
+                <h4>Flutter</h4>
+                <div class="prog">
+                  <span style="width: 95%" data-progress="95%"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Skills -->
+
+      <!-- Start Quote -->
+      <div class="quote">
+        <div class="container">
+          <q
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+            incidunt</q
+          >
+          <span>John Deo</span>
+        </div>
+      </div>
+      <!-- End Quote -->
+    </section>
+    <!-- End About Us -->
+
+    <!-- Start Pricing -->
+    <section class="pricing">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <div class="content">
+            <h2>Pricing</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+
+        <!-- Body Pricing -->
+        <div class="plans">
+          <div class="plan-item">
+            <div class="head">
+              <h3>Basic</h3>
+              <span>19</span>
+            </div>
+            <ul>
+              <li>Feature NO 1</li>
+              <li>Extra Feature</li>
+              <li>Extra Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+
+          <div class="plan-item">
+            <div class="head">
+              <h3>Premium</h3>
+              <span>29</span>
+            </div>
+            <ul>
+              <li>Feature NO 1</li>
+              <li>Extra Feature</li>
+              <li>Extra Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+
+          <div class="plan-item">
+            <div class="head">
+              <h3>pro</h3>
+              <span>39</span>
+            </div>
+            <ul>
+              <li>Feature NO 1</li>
+              <li>Extra Feature</li>
+              <li>Extra Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+
+          <div class="plan-item">
+            <div class="head">
+              <h3>platinum</h3>
+              <span>49</span>
+            </div>
+            <ul>
+              <li>Feature NO 1</li>
+              <li>Extra Feature</li>
+              <li>Extra Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-text">
+          <p>Contact us if you have special request</p>
+          <button type="button">Contact Us</button>
+        </div>
+      </div>
+    </section>
+    <!-- End Pricing -->
+
+    <!-- Start Subscribe -->
+    <div class="subscribe">
+      <div class="container">
+        <form action="">
+          <i class="far fa-envelope fa-lg"></i>
+          <input type="email" name="mail" placeholder="Your Email" />
+          <button type="submit">Subscribe</button>
+        </form>
+        <p>
+          Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+          Mauris blan dit aliquet elit, eget tincidunt.
+        </p>
+      </div>
+    </div>
+    <!-- End Subscribe -->
+
+    <!-- Start contact Us -->
+    <section class="contact-us">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <div class="content">
+            <h2>Contact Us</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+
+        <!-- Body contact-us -->
+        <div class="contact-us-container">
+          <form action="">
+            <input class="main-input" type="text" placeholder="Your Name" />
+            <input class="main-input" type="email" placeholder="Your Email" />
+            <textarea
+              class="main-input"
+              name="massage"
+              id="massage"
+              spellcheck="false"
+              placeholder="Your Massage"
+            ></textarea>
+            <button class="send-message" type="button">Send Message</button>
+          </form>
+          <div class="info-contact">
+            <h4>Get In Touch</h4>
+            <span class="phone">+00 123 456 789</span>
+            <span class="phone">+00 123 456 789</span>
+            <h4>Where We Are</h4>
+            <address>
+              Awesome Address 17
+              <br />
+              New York, NY, USA
+              <br />
+              123-4567-890
+              <br />
+              USA
+            </address>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End contact Us -->
+
+    <!-- Start Footer -->
+    <footer class="footer">
+      <div class="container">
+        <!-- Body Footer -->
+        <div class="footer-container">
+          <img src="assets/images/logo.png" alt="Logo" />
+          <p>We Are Social</p>
+          <div class="social-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fas fa-home"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+          <p class="copyright">© 2021 <span>Kasper</span> All Right Reserved</p>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
   </body>
 </html>
