--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="css/package/all.min.css" />
 
-    <!-- Main template Css file -->
-    <link rel="stylesheet" href="css/kasper.css" />
-    <link rel="stylesheet" href="css/glabal_rulse.css" />
-    <link rel="stylesheet" href="css/components/header.css" />
-    <link rel="stylesheet" href="css/components/landing.css" />
-    <link rel="stylesheet" href="css/components/main_heading.css" />
-    <link rel="stylesheet" href="css/components/services.css" />
-    <link rel="stylesheet" href="css/components/design.css" />
-    <link rel="stylesheet" href="css/components/portfolio.css" />
-    <link rel="stylesheet" href="css/components/video.css" />
-    <link rel="stylesheet" href="css/components/about.css" />
-    <link rel="stylesheet" href="css/components/pricing.css" />
-    <link rel="stylesheet" href="css/components/contact_us.css" />
-    <link rel="stylesheet" href="css/components/footer.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- Font Family ==> (Open Sans) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
